Fixed Verification code problems
